# inprossa

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  README.md  error.txt  error2.txt  mkdocs.yml  notes.txt  notes2.md  notes_mst.md  notes_mst_mcts.md  pyproject.toml
.devcontainer/: .env  devcontainer.json  docker-compose.yml
bin_packing_mcts/: errors.md
bin_packing_mcts/config/: bin_packing_alphazero_config.py  bin_packing_muzero_config.py
bin_packing_mcts/entry/: train_alphazero.py  train_muzero.py
bin_packing_mcts/envs/: bin_packing_env.py  utils_x.py  utils_x_backup.py
bin_packing_mcts/tests/: test_bin_packing_env.py
data_az/bin_packing_alphazero_ns50_upc200_seed0/: formatted_total_config.py  git_diff.txt  total_config.py
data_az/bin_packing_alphazero_ns50_upc200_seed0/log/learner/: learner_logger.txt
data_az/bin_packing_alphazero_ns50_upc200_seed0/log/serial/: events.out.tfevents.1772037538.29fc9d777b85
data_mz_ptree/bin_packing_muzero_ns50_upc200_seed0/: formatted_total_config.py  git_diff.txt  git_log.txt  total_config.py
data_mz_ptree/bin_packing_muzero_ns50_upc200_seed0_260225_160858/: formatted_total_config.py  total_config.py
docs/: index.md  reference.md
wp2/documentation/: _quarto.yml  monte-carlo-ree-search.html  monte-carlo-ree-search.qmd  original_solution_concept.html  original_solution_concept.qmd  references.bib
wp2/formulation/: GenericProblem.txt  GenericProblem2.txt  README.md  WoodCutting.txt  WoodCutting_Bad_and_Curved.txt
wp2/source/: minizinc_playground.py  minizinc_program.txt
wp2/source/NL2DSL/: algo_polish.py  constants.py  convert_2DPackLib_to_local.py  generate_random-value_input_files.py  model_reuser.py  prompt_generation_utils.py  readme.md  run_k_sequential_pipeline_runs.py  run_paper_tot_algorithms.py  run_test_files_dfs.py  solver.py  structures_utils_PolishModel.py  tree_search_base.py  tree_search_dfs.py
wp2/source/NL2DSL/LLM_Client/: AwsClient.py
wp2/source/NL2DSL/Translator/: README.md
wp2/source/NL2DSL/experiments/: extract_objective_value_scatterplot_data.py  handcrafted_2d_bin_packing.py  objective_values_n20_scatterplot.csv  solvetimes_values_n20.csv  solvetimes_vs_objective_values_n20.csv  solvetimes_vs_objective_values_n20_scatterplot.csv  update_models.py
wp2/source/NL2DSL/models/: algopolish_test_woodcutter.json
wp2/source/NL2DSL/problem_descriptions/: 2d_bin_packing_without_inoutput.json  2d_bin_packing_without_input.json  2d_bin_packing_without_output.json  woodcutter_without_inoutput.json
wp2/source/NL2DSL/unit_tests/: input_reader_test.py
wp2/source/minizinc/: README.md  main.py  out.txt  requirements.txt
wp2/source/minizinc/Experiments/: Instance.py  create_csv.py  create_figures.py  experiments.py
wp2/source/minizinc/FirstProject/: README.md  checking_machine.mzn  constraints.mzn  data.dzn  main.mzn  predicates.mzn
wp2/source/minizinc/NL2DSL/: .openrouter_api_key  BinPackingValidator.py  Katharina_Blaimschein_bedrock-api-keys.csv  MinuteTracker.py  WoodCutterValidator.py  algo_polish.py  constants.py  convert_2DPackLib_to_local.py  generate_fixed_obj_inoutput_files.py  generate_flex_obj_input_files.py  generate_random-value_input_files.py  input_reader.py  minizinc_solver.py  model_reuser.py  obsolete_optdsl.py  playground_codeBleu.py  prompt_generation_utils.py  readme.md  run_k_sequential_pipeline_runs.py  run_paper_testset_scatterplot_data.py  run_test_files_dfs.py  solver.py  structures_utils.py  structures_utils_PolishModel.py  tree_search.py  tree_search_base.py  tree_search_dfs.py  tryout_pipeline.py  tryout_pipeline_1.0.py  z3_utils_hakank.py
wp2/source/minizinc/Tools/: DSL_runner.py  MinizincRunner.py
wp2/source/minizinc/Translator/: LanguageDescription.md  README.md  TODO.md  Tools.py  helper_tools.py  main.py  predicate_translation.py  simple_for_loop.py  test_unrolling_translation.py  unrolling_translation.py
wp2/source/minizinc/src/: __init__.py
wp2/source/mod_gen_opt/: README.md  example_lns.py  example_tree_search.py  main.py  pyproject.toml
wp2/source/mod_gen_opt/Tools/: convert_2dbp_to_optdsl.py  convert_golden_cvrp_to_optdsl.py  convert_golden_cvrp_to_optdsl_giant_tour.py  visualize_2dbp_solution.py  visualize_cvrp_solution.py  visualize_jssp_solution.py
wp2/source/mod_gen_opt/large_neighborhood_search/: __init__.py  components.py  defaults.py  engine.py  importer.py  lns.py  models.py  problem_reader.py
wp2/source/mod_gen_opt/llm/: llmclient.py
wp2/source/mod_gen_opt/presentation/: optdsl_unified_search.qmd
wp2/source/mod_gen_opt/test/: test_all.ps1  test_warm_starts.ps1
wp2/source/optimiser/: TODO.txt  incremental.py
wp2/source/optimiser/IncrementalPipeline/: config_loader.py  main.py
wp2/source/optimiser/OneBoard-LinearProgramming/: README.md  check.py  config.py  cut.py  filter.py  optimise.py  reorder.py
wp2/source/optimiser/TestIncrementalPipeline/: test_CuttingMachine.py
wp2/source/problem-data-generator/: .dockerignore  .gitlab-ci.yml  Dockerfile  README.md  mkdocs.yml  pyproject.toml
wp2/source/problem-data-generator/docs/: index.md  reference.md
wp2/source/simulator/: WoodCutter  WoodCutter.bat  commands.error  commands.okay  one_beam_no_faults.commands  woodcutting.json
wp2/source/tree_search/: binpacking.dsl.py
wp3/examples/: README.txt  WC1.txt  WC2.txt  WC2b.txt  WC3.txt  WC4.txt  WC4b.txt  WC5.txt  WC5b.txt
wp5/: .gitignore  Dockerfile  README.md  pyproject.toml
wp5/.devcontainer/: .env  devcontainer.json  docker-compose.yml
wp5/InProSSA_Reinforcement_Learning/: MCTS.py
wp5/InProSSA_Reinforcement_Learning/DataPreparation/: GenerateTspInstance.py  ProblemLoader.py
wp5/InProSSA_Reinforcement_Learning/Visualization/: TspVisualizer.py
wp5/InProSSA_Reinforcement_Learning/instances/: tsp_instance_10.json  tsp_instance_100.json  tsp_instance_50.json
wp5/mcts/: transformer.py  transformer_.py  vit_inspection.py
wp5/mcts/bin_packing/: env.py  eval.py  net.py  test_net.py  train.py  visualization.py
wp6/final_report/: Beschreibung-58139847-2026-02-11.docx  Description_58139847-2026-02-11.md
(+1257 files in other folders)
