# uv sync --all-extras
# python -c "import lzero; print(lzero.__version__)"
# uv pip show lightzero
# ll /opt/venv/lib/python3.11/site-packages/lzero/
# python -c "import ding"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inprossa"
version = "0.0.1"
requires-python = "~=3.11.0"
description = "One or Two sentence description of the package..."
authors = [
  { name = "Michael Bögl", email = "michael.boegl@risc-software.at" },
  { name = "Markus Steindl", email = "markus.steindl@risc-software.at" }
]
readme = "README.md"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
  "itsdangerous<2.0",
  "jinja2<3.0",
  "lightzero[mcts]",
  # "numpy>=2.4.2",
  # "pandas>=3.0.1",
  # "polars>=1.38.1",
]

[project.optional-dependencies]
mcts = [
    "lightzero>=0.1.0",
]

[project.urls]
Repository = "https://github.com/RISCSoftware/inprossa.git"

[tool.uv]
environments = ["python_version == '3.11'"]

[[tool.uv.index]]
name = "risc-pypi"
url = "https://pypinexus01.risc-software.at/repository/pypi/simple/"
explicit = true

[[tool.uv.index]]
# The cuda version specified here must match the one of `FROM_IMAGE` specified in `.devcontainer/docker-compose.yml`.
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
# The cuda version specified here must match the one of `FROM_IMAGE` specified in `.devcontainer/docker-compose.yml`.
torch = [
  {index = "pytorch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'"},
]
torchvision = [
  {index = "pytorch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'"},
]
lightzero = { git = "https://github.com/opendilab/LightZero.git", rev = "30abd5a775b32a0c7c6371488f4b330491218537"}

[tool.hatch.build.targets.sdist]
include = ["inprossa"]

[tool.hatch.build.targets.wheel]
include = ["inprossa"]

[dependency-groups]
dev = [
  "poethepoet>=0.20.0",
  "black[jupyter]>=23.3.0",
  "ruff>=0.0.272",
  "isort>=5.12.0",
  "pytest>=7.3.2",
  "pytest-clarity>=1.0.1",
  "pytest-cov>=4.1.0",
  "pytest-xdist>=3.3.1",
#   "mkdocs>=1.4.3",
#   "mkdocs-material>=9.1.15",
#   "mkdocstrings[python]>=0.22.0",
  "setuptools",
  "pip>=25.0.1",
]
[tool.poe.tasks]
# https://github.com/nat-n/poethepoet
_format = "black ."
_sort_imports = "isort ."
_lint = "ruff check --fix ."

_check_format = "black --check ."
_check_sort_imports = "isort --check ."
_check_lint = "ruff check ."

# if you are using uv for dependency management, you have to generate a requirements.txt first
_convert_to_req_txt = { shell = "uv export --no-hashes --format=requirements-txt > requirements.txt" }
# check authorization of the licenses of dependencies as defined in [tool.liccheck] section 
# (or a separate liccheck.ini-file)
_check_licenses = "liccheck -s liccheck.ini -r requirements.txt"

check_licenses = [
    "_convert_to_req_txt",
    "_check_licenses",
]

docs = "mkdocs serve"
precommit = ["_format", "_sort_imports", "_lint"]
check = ["_check_format", "_check_sort_imports", "_check_lint", "check_licenses"]
test = "pytest"

[tool.black]
# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
line-length = 120

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/config_files
profile = "black"

[tool.pytest.ini_options]
# https://docs.pytest.org/en/7.1.x/reference/customize.html
addopts = "--color=yes --doctest-modules  -ra --cov --cov-report=html --cov-report term --cov-report xml:coverage.xml --exitfirst --failed-first --strict-config --strict-markers --verbosity=2 --junitxml=python-junit.xml"
xfail_strict = true
pythonpath = ["inprossa"]
testpaths = ["inprossa", "tests"]
# ignore any of these paths
norecursedirs = [ ]

[tool.ruff]
# https://github.com/charliermarsh/ruff
fix = true
line-length = 120
src = ["inprossa", "tests"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.liccheck]
# see also: https://pypi.org/project/liccheck/
# Authorized and unauthorized licenses in LOWER CASE
authorized_licenses = [
  "bsd",
  "new bsd",
  "bsd-3-clause",
  "bsd 3-clause",
  "bsd license",
  "isc",
  "isc license",
  "isc license (iscl)",
  "apache",
  "apache-2.0",
  "apache 2.0",
  "apache software",
  "apache software license",
  "apache license, version 2.0",
  "gnu lgpl",
  "historical permission notice and disclaimer (hpnd)",
  "lgpl with exceptions or zpl",
  "mozilla public license 2.0 (mpl 2.0)",
  "mit",
  "mit license",
  "new bsd license",
  "python software foundation license",
  "python software foundation",
  "psf-2.0",
  "simplified bsd",
  "the unlicense (unlicense)",
]
# as_regex = true -> e.g. '\bgpl'
unauthorized_licenses = [
  "gpl v3",
  "gnu general public license v2 or later (gplv2+)",
]
level = "standard"  # alternatives: "cautious", "paranoid"
requirement_txt_file = "./requirements.txt"
reporting_txt_file = "./liccheck_reporting.txt" # by default is None

[tool.liccheck.authorized_packages]
# Python software license (see http://zesty.ca/python/uuid.README.txt)
uuid = "1.30"
