[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inprossa-mctx"
version = "0.0.1"
requires-python = "~=3.12.0"
description = "One or Two sentence description of the package..."
authors = [{ name = "Markus Steindl", email = "markus.steindl@risc-software.com" }]
readme = "README.md"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
  "dm-haiku>=0.0.16",
  "flask>=3.1.3",
  "flax>=0.12.5",
  # "gemma>=3.3.0",
  "jax[cuda12]>=0.9.1",
  "matplotlib>=3.10.8",
  "mctx>=0.0.6",
  # "tensorboard>=2.20.0",  # for gemma
  # "tensorflow-metadata>=1.0",  # for gemma
  "omegaconf>=2.3.0",
  "pandas>=3.0.1",
  "pgx>=2.6.0",
  "pydantic>=2.12.5",
  "torch>=2.10.0,<2.11.0",
  "transformers>=5.3.0",
  # "typeguard==4.4.1",  # for gemma
  "wandb>=0.25.1",
]

[project.urls]
Repository = "https://github.com/user/my-package"

[tool.uv]
environments = ["python_version == '3.12'"]

[[tool.uv.index]]
name = "risc-pypi"
url = "https://pypinexus01.risc-software.at/repository/pypi/simple/"
explicit = true

[[tool.uv.index]]
# The cuda version specified here must match the one of `FROM_IMAGE` specified in `.devcontainer/docker-compose.yml`.
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
# The cuda version specified here must match the one of `FROM_IMAGE` specified in `.devcontainer/docker-compose.yml`.
torch = [
  {index = "pytorch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'"},
]
torchvision = [
  {index = "pytorch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'"},
]

[tool.hatch.build.targets.sdist]
include = ["mcts"]

[tool.hatch.build.targets.wheel]
include = ["mcts"]

[dependency-groups]
dev = [
  "black[jupyter]>=26.1.0",
  "isort>=7.0.0",
  "liccheck>=0.9.2",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.7.1",
  "mkdocstrings[python]>=1.0.3",
  "pip>=26.0.1",
  "poethepoet>=0.41.0",
  "pytest>=9.0.2",
  "pytest-clarity>=1.0.1",
  "pytest-cov>=7.0.0",
  "pytest-xdist>=3.8.0",
  "ruff>=0.15.0",
  
  # pinned for liccheck
  "setuptools==78.1.0",
]

[tool.poe.tasks]
# https://github.com/nat-n/poethepoet
_format = "black ."
_sort_imports = "isort ."
_lint = "ruff check --fix ."

_check_format = "black --check ."
_check_sort_imports = "isort --check ."
_check_lint = "ruff check ."

# if you are using uv for dependency management, you have to generate a requirements.txt first
_convert_to_req_txt = { shell = "uv export --no-hashes --format=requirements-txt > requirements.txt" }
# check authorization of the licenses of dependencies as defined in [tool.liccheck] section 
# (or a separate liccheck.ini-file)
_check_licenses = "liccheck -s liccheck.ini -r requirements.txt"

check_licenses = [
    "_convert_to_req_txt",
    "_check_licenses",
]

docs = "mkdocs serve"
precommit = ["_format", "_sort_imports", "_lint"]
check = ["_check_format", "_check_sort_imports", "_check_lint", "check_licenses"]
test = "pytest"

[tool.black]
# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
line-length = 120
exclude = "(pgx|InProSSA_Reinforcement_Learning)"

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/config_files
profile = "black"
skip_glob = ["pgx/*", "InProSSA_Reinforcement_Learning/*"]

[tool.pytest.ini_options]
# https://docs.pytest.org/en/7.1.x/reference/customize.html
addopts = "--color=yes --doctest-modules  -ra --cov --cov-report=html --cov-report term --cov-report xml:coverage.xml --exitfirst --failed-first --strict-config --strict-markers --verbosity=2 --junitxml=python-junit.xml"
xfail_strict = true
pythonpath = ["/workspace/wp5"]
testpaths = ["/workspace/wp5"]
# ignore any of these paths
norecursedirs = [ ]

[tool.ruff]
# https://github.com/charliermarsh/ruff
fix = true
line-length = 120
src = ["/workspace/wp5", "tests"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.liccheck]
# see also: https://pypi.org/project/liccheck/
# Authorized and unauthorized licenses in LOWER CASE
authorized_licenses = [
  "bsd",
  "new bsd",
  "bsd-3-clause",
  "bsd 3-clause",
  "bsd license",
  "isc",
  "isc license",
  "isc license (iscl)",
  "apache",
  "apache-2.0",
  "apache 2.0",
  "apache software",
  "apache software license",
  "apache license, version 2.0",
  "gnu lgpl",
  "historical permission notice and disclaimer (hpnd)",
  "lgpl with exceptions or zpl",
  "mozilla public license 2.0 (mpl 2.0)",
  "mit",
  "mit license",
  "new bsd license",
  "python software foundation license",
  "python software foundation",
  "psf-2.0",
  "simplified bsd",
  "the unlicense (unlicense)",
]
# as_regex = true -> e.g. '\bgpl'
unauthorized_licenses = [
  "gpl v3",
  "gnu general public license v2 or later (gplv2+)",
]
level = "standard"  # alternatives: "cautious", "paranoid"
requirement_txt_file = "./requirements.txt"
reporting_txt_file = "./liccheck_reporting.txt" # by default is None

[tool.liccheck.authorized_packages]
# Python software license (see http://zesty.ca/python/uuid.README.txt)
uuid = "1.30"
